--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,151 @@
 /*comenten su codigo
 coloquen a que seccion estan dando estilos
 y su nombre*/
+
+/*------------PROFILE STYLE------------*/
+/* .index-content a:hover{
+    color:black;
+    text-decoration:none;
+}
+.index-content{
+    margin-bottom:20px;
+    padding:50px 0px;
+    
+}
+.index-content .row{
+    margin-top:20px;
+}
+.index-content a{
+    color: black;
+}
+.index-content .card{
+    background-color: #FFFFFF;
+    padding:0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius:4px;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
+
+}
+.index-content .card:hover{
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
+    color:black;
+}
+.index-content .card img{
+    width:100%;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.index-content .card h4{
+    margin:20px;
+}
+.index-content .card p{
+    margin:20px;
+    opacity: 0.65;
+}
+.index-content .orange-button{
+    width: 100px;
+    -webkit-transition: background-color 1s , color 1s; /* For Safari 3.1 to 6.0 */
+    /*transition: background-color 1s , color 1s;
+    min-height: 20px;
+    background-color: rgb(231, 99, 23);
+    color: #ffffff;
+    border-radius: 4px;
+    text-align: center;
+    font-weight: lighter;
+    margin: 0px 20px 15px 20px;
+    padding: 5px 0px;
+    display: inline-block;
+}
+.index-content .orange-button:hover{
+    background-color: #dadada;
+    color: rgb(231, 99, 23);
+}
+@media (max-width: 768px) {
+
+    .index-content .col-lg-4 {
+        margin-top: 20px;
+    }
+} */
+
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+
+@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great');
+
+#profile {
+   font-family: 'Open Sans', sans-serif;
+}
+.card-header {
+   background: none;
+   padding: 0;
+   
+   border-style: none;
+}
+.card-img {
+  width: 100%;
+  height: 30em;
+}
+.card-body {
+   
+   margin-top: -45%;
+   color: #9FA7A9;
+   margin: 15px;
+}
+.card-title {
+  font-weight: 600;
+  color: #414345;
+}
+.card-text {
+  margin-top: 8px;
+  font-weight: 600;
+  line-height: 30px;
+}
+.card:hover {
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.10), 0 8px 8px rgba(0, 0, 0, 0.18);
+}  
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 8pt;
+  border-style: none;
+  overflow: hidden;
+  transform: scale(0.8);
+  margin-top: -60px;
+}
+hr.style-eight {
+  overflow: visible; /* For IE */
+  padding: 0;
+  border: none;
+  border-top: medium double #333;
+  color: #333;
+  text-align: center;
+}
+hr.style-eight:after {
+  content: "§";
+  display: inline-block;
+  position: relative;
+  top: -0.7em;
+  font-size: 1.5em;
+  padding: 0 0.25em;
+  background: white;
+}
+.orange-button{
+  width: 100px;
+  -webkit-transition: background-color 1s , color 1s; /* For Safari 3.1 to 6.0 */
+  transition: background-color 1s , color 1s;
+  min-height: 20px;
+  background-color: rgb(231, 99, 23);
+  color: #ffffff;
+  border-radius: 4px;
+  text-align: center;
+  font-weight: lighter;
+  margin: 20px 20px 15px 0px;
+  padding: 5px 0px;
+  display: inline-block;
+}
+.orange-button:hover{
+  background-color: #dadada;
+  color: rgb(231, 99, 23);
+}
+
+/*----------END PROFILE STYLE----------*/
