--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,42 +13,69 @@
 *{
 	margin: 0;
 	padding: 0;
-	font-family: 'Atomic Age', cursive;
+	font-family: 'Sedgwick Ave Display', cursive;
+	color: #F34906;
+
 }
-/*--------------vv-navbar_inicio-vv------------------------*/
+
+/*--------------vv-nav-bar_inicio-vv------------------------*/
 .bar{
-	background-color: #0E1526;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	line-height: 40px;
-	z-index: 10;
-	border-radius: 0;
-	border:0;
+	width: 100%;
+	background: rgba (0,0,0,.8);
+	height: 70px;
 	position: fixed;
+	z-index: 1;
+	background-color:#0E1526;
 }
-.navbar-brand, .register, .log-in, .caret{
-	color:#F34906;
+.mt-title{
+	display: inline-block;
+	padding-top:4%;
 }
-a{
-	color:#F38016;
-}
-.find{
-	border-radius: 10px 10px 10px 10px;
-    padding-top:2%;
-    padding-left: 8%;
-    height: 20%;
-}
-.register{
+.mt-logo{
+	width: 9%;
+	height: 150%;
+	margin: 0;
+	padding: 0;
+	display: inline-block;
 
 }
-/*--------------^^-navbar_cierre-^^------------------------*/
 
-/*--------------vv-Carrusel_inicio-vv------------------------*/
-#myCarousel{
-	height: 80%;
+/*--------------vv-navbar_cierre-vv------------------------*/
+
+/*--------------vv-carrusel_inicio-vv------------------------*/
+	#myCarousel{
+		background-size:cover;
+		background-position: center;
+		background-attachment: contain; 
+		width: 100%;
+	}
+/*--------------^^-carrusel_cierre-^^------------------------*/
+
+/*--------------vv-saludo-inicio-vv------------------------*/
+.welcome{
+	top: 200px;
+	position: absolute;
+	width: 100%;
+	background: rgba(0,0,0,.7);
+	text-align: center;
+	
+	
 }
-/*--------------^^-Cierre_Carrusel-^^------------------------*/
+.salute{
+	width: 80%;
+	margin: auto;
+	z-index: 1;
+}
+.salute h1{
+	color: #F34906;
+	
+}
+.salute p{
+	color: #F34906;
+	font-weight: 4%;
+}
+/*--------------^^-saludo cierre-^^------------------------*/
+/*--------------vv-barra de usuarios-vv------------------------*/
 .rol{
 	border-radius: 50px 50px 50px 50px;
 	display: inline-block;
@@ -65,13 +92,13 @@ nav li a {
 	display: inline-block;
 	padding: 0;
 }
-li {
-	width: 
-}
 a.badge{
 	display: inline-block;
 	width: 10%;
 }
+/*--------------^^-barra de usuarios-^^------------------------*/
+
+
 /*^^^^^^^^^^^^^^DUBRASSKA^^^^^^^^^^^^^^*/
 
 /*comenten su codigo
