--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,28 @@
 /*comenten su codigo
 coloquen a que seccion estan dando estilos
 y su nombre*/
+body{
+  margin: 0 auto;
+}
+.navBar{
+  background-color: black;
+  width: 100%;
+  height: 5em;
+  margin-bottom: 2%;
+}
+.img{
+  display: inline-block;
+  border-radius: 0.5em;
+  width: 12em;
+  margin: 1%;
+}
+.img:hover{
+  filter: grayscale(50);
+}
+.line{
+  margin-left: 5%;
+  margin-bottom: 5%;
+  background-color: orange;
+  width: 6em;
+  height: 0.2em;
+}
