--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,18 +1,14 @@
 /*comenten su codigo
 coloquen a que seccion estan dando estilos
 y su nombre*/
-body{
-  margin: 0 auto;
-}
-.navBar{
-  background-color: black;
-  width: 100%;
-  height: 5em;
-  margin-bottom: 2%;
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Sedgwick Ave Display', cursive;
+  color: #F34906;
 }
 .img{
   display: inline-block;
-  border-radius: 0.5em;
   width: 12em;
   margin: 1%;
 }
@@ -20,7 +16,7 @@ body{
   filter: grayscale(50);
 }
 .line{
-  margin-left: 5%;
+  margin-left: 4%;
   margin-bottom: 5%;
   background-color: orange;
   width: 6em;
