--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+
+/*comenten su codigo
+coloquen a que seccion estan dando estilos
+y su nombre*/
 /*comenten su codigo coloquen a que seccion estan dando estilos y su nombre
 
 		-->PALETA DE COLORES<--
@@ -14,63 +18,61 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Sedgwick Ave Display', cursive;
+    font-family: 'Noto Sans', sans-serif;
     color: #F34906;
 }
-
-
 /*--------------vv-nav-bar_inicio-vv------------------------*/
-
-.bar {
-    width: 100%;
-    background: rgba (0, 0, 0, .8);
-    height: 70px;
-    position: fixed;
-    z-index: 1;
-    background-color: #0E1526;
+.nav-bar{
+  background-color: black;
+  height: 5em;
 }
-
-.navbar {
-    margin-bottom: 0 !important;
+.title-page{
+  text-decoration: none;
+  color: white;
+  font-size: 2em;
+  margin-left: 5%;
 }
-
-.navbar-brand,
-.register,
-.log-in,
-.caret {
-    color: #F34906;
+.title-page:hover{
+  text-decoration: none;
+  color: white;
 }
-
-a {
-    color: #F38016;
+.logo{
+  width: 2em;
 }
-
-.find {
-    border-radius: 10px 10px 10px 10px;
-    padding-top: 2%;
-    padding-left: 8%;
-    height: 20%;
+#inputSearchIndex{
+  width: 20em;
+  margin-top: 3%;
+  padding: 1%;
+  border-radius: 0.3em;
 }
-
-
-/*--------------^^-navbar_cierre-^^------------------------*/
-
-.mt-title {
-    display: inline-block;
-    padding-top: 4%;
+.search{
+  padding: 1.5%;
+  border-radius: 0.3em;
 }
-
-.mt-logo {
-    width: 9%;
-    height: 150%;
-    margin: 0;
-    padding: 0;
-    display: inline-block;
+.search:hover{
+  background-color: grey;
+  text-decoration: none;
+  color: #F38016;
 }
+.login, .register{
+  margin-right: 5%;
+  margin-top: 4.5%;
+}
+.login:hover, .register:hover{
+  background-color: grey;
+  color: #F38016;
 
-
-/*--------------vv-navbar_cierre-vv------------------------*/
-
+}
+.login{
+  padding: 1.5%;
+  background-color: #F3D352;
+  color: white;
+}
+.register{
+  padding: 1.5%;
+  background-color: #F38016;
+  color: white;
+}
 
 /*--------------vv-carrusel_inicio-vv------------------------*/
 
@@ -79,9 +81,8 @@ a {
     background-position: center;
     background-attachment: contain;
     width: 100%;
+    margin-bottom: 2%;
 }
-
-
 /*--------------^^-carrusel_cierre-^^------------------------*/
 
 
@@ -112,21 +113,13 @@ a {
 
 
 /*--------------^^-saludo cierre-^^------------------------*/
-
-
 /*--------------vv-barra de usuarios-vv------------------------*/
 
-.rol {
-    border-radius: 50px 50px 50px 50px;
-    display: inline-block;
-    padding: 0;
-    margin-left: 12%;
-}
-
 .user {
-    width: 20%;
-    height: 20%;
-    display: inline-block;
+  display: inline-block;
+  border-radius: 50%;
+  width: 3em;
+  margin: 2%;
 }
 
 nav li a {
@@ -138,6 +131,7 @@ nav li a {
 a.badge {
     display: inline-block;
     width: 10%;
+    margin-left: 2%;
 }
 
 
@@ -150,8 +144,11 @@ a.badge {
 /* SECCION REVIEWS *****************************/
 
 .imgPerfilReiews {
-    width: 70%;
+    width: 5em;
     border-radius: 50%
+}
+.trailer{
+  margin-bottom: 2%;
 }
 
 .tdImgReviews {
@@ -165,7 +162,7 @@ ul {
 }
 
 .borderReviews {
-    border: 1px solid #ddd;
+    margin: 1%;
 }
 
 .fa-star {
@@ -289,3 +286,4 @@ hr.style-eight:after {
 
 
 /*----------END PROFILE STYLE----------*/
+
