--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,8 @@
-
 /*comenten su codigo
 coloquen a que seccion estan dando estilos
 y su nombre*/
+
+
 /*comenten su codigo coloquen a que seccion estan dando estilos y su nombre
 
 		-->PALETA DE COLORES<--
@@ -21,58 +22,73 @@ body {
     font-family: 'Noto Sans', sans-serif;
     color: #F34906;
 }
-/*--------------vv-nav-bar_inicio-vv------------------------*/
-.nav-bar{
-  background-color: black;
-  height: 5em;
-}
-.title-page{
-  text-decoration: none;
-  color: white;
-  font-size: 2em;
-  margin-left: 5%;
-}
-.title-page:hover{
-  text-decoration: none;
-  color: white;
-}
-.logo{
-  width: 2em;
-}
-#inputSearchIndex{
-  width: 20em;
-  margin-top: 3%;
-  padding: 1%;
-  border-radius: 0.3em;
-}
-.search{
-  padding: 1.5%;
-  border-radius: 0.3em;
-}
-.search:hover{
-  background-color: grey;
-  text-decoration: none;
-  color: #F38016;
-}
-.login, .register{
-  margin-right: 5%;
-  margin-top: 4.5%;
-}
-.login:hover, .register:hover{
-  background-color: grey;
-  color: #F38016;
 
+
+/*--------------vv-nav-bar_inicio-vv------------------------*/
+
+.nav-bar {
+    background-color: black;
+    height: 5em;
 }
-.login{
-  padding: 1.5%;
-  background-color: #F3D352;
-  color: white;
+
+.title-page {
+    text-decoration: none;
+    color: white;
+    font-size: 2em;
+    margin-left: 5%;
 }
-.register{
-  padding: 1.5%;
-  background-color: #F38016;
-  color: white;
+
+.title-page:hover {
+    text-decoration: none;
+    color: white;
 }
+
+.logo {
+    width: 2em;
+}
+
+#inputSearchIndex {
+    width: 20em;
+    margin-top: 3%;
+    padding: 1%;
+    border-radius: 0.3em;
+}
+
+.search {
+    padding: 1.5%;
+    border-radius: 0.3em;
+}
+
+.search:hover {
+    background-color: grey;
+    text-decoration: none;
+    color: #F38016;
+}
+
+.login,
+.register {
+    margin-right: 5%;
+    margin-top: 4.5%;
+}
+
+.login:hover,
+.register:hover {
+    background-color: grey;
+    color: #F38016;
+}
+
+.login {
+    padding: 1.5%;
+    background-color: #F3D352;
+    color: white;
+}
+
+.register {
+    padding: 1.5%;
+    background-color: #F38016;
+    color: white;
+}
+
 
 /*--------------vv-carrusel_inicio-vv------------------------*/
 
@@ -81,8 +97,9 @@ body {
     background-position: center;
     background-attachment: contain;
     width: 100%;
-    margin-bottom: 2%;
 }
+
+
 /*--------------^^-carrusel_cierre-^^------------------------*/
 
 
@@ -113,13 +130,15 @@ body {
 
 
 /*--------------^^-saludo cierre-^^------------------------*/
+
+
 /*--------------vv-barra de usuarios-vv------------------------*/
 
 .user {
-  display: inline-block;
-  border-radius: 50%;
-  width: 3em;
-  margin: 2%;
+    display: inline-block;
+    border-radius: 50%;
+    width: 3em;
+    margin: 2%;
 }
 
 nav li a {
@@ -147,8 +166,9 @@ a.badge {
     width: 5em;
     border-radius: 50%
 }
-.trailer{
-  margin-bottom: 2%;
+
+.trailer {
+    margin-bottom: 2%;
 }
 
 .tdImgReviews {
@@ -174,13 +194,17 @@ ul {
     margin-top: 10px;
 }
 
-#modalReviews {
-    background-color: rgba(0, 0, 0, 0.6);
+.modalReviews {
+    background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     border: 2px solid #fff;
     -webkit-box-shadow: 1px 1px 35px -5px rgba(255, 255, 255, 1);
     -moz-box-shadow: 1px 1px 35px -5px rgba(255, 255, 255, 1);
     box-shadow: 1px 1px 35px -5px rgba(255, 255, 255, 1);
+}
+
+.modalReviewss {
+    background-color: transparent;
 }
 
 .starModal {
@@ -287,3 +311,154 @@ hr.style-eight:after {
 
 /*----------END PROFILE STYLE----------*/
 
+
+/* SECCION REVIEWS *****************************/
+
+#posterImg {
+    margin-left: 10%;
+    margin-bottom: 5%;
+    border-radius: 1em;
+}
+
+.btn-trailer {
+    margin-bottom: 5%;
+}
+
+.info-movie span {
+    color: black;
+}
+
+.color-reviews {
+    background-color: #F2F2F2;
+    border-radius: 1em;
+    margin: 2%;
+    margin-right: 3%;
+}
+
+.user_ {
+    margin-right: 7%;
+}
+
+.user-name {
+    text-decoration: none;
+    color: #F34906;
+}
+
+.user-name:hover {
+    text-decoration: none;
+    color: black;
+}
+
+.reviews {
+    margin-top: 2%;
+    color: black;
+}
+
+.user_ img {
+    width: 4em;
+    border-radius: 50%;
+}
+
+.btnSendModalReview {
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+#modalReviews {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    border: 2px solid #fff;
+    -webkit-box-shadow: 1px 1px 35px -5px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 1px 1px 35px -5px rgba(255, 255, 255, 1);
+    box-shadow: 1px 1px 35px -5px rgba(255, 255, 255, 1);
+}
+
+.starModal {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+#txtareaReviews {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+}
+
+#formModal {
+    padding: 2em;
+}
+
+*
+/*--------------v-cartelera inicio-v------------------------*/
+
+.cinema {
+    background-color: #000;
+}
+
+.imgmovie {
+    width: 50%;
+    height: 50%;
+}
+
+.firstLine,
+.secondLine,
+.thirdLine {
+    margin-top: 4%;
+    margin-left: 6%;
+}
+
+.thirdLine {
+    margin-bottom: 6%;
+}
+
+.firstLine h3 {
+    color: #fff;
+}
+
+.final {
+    background-color: #000;
+    color: #fff;
+}
+
+.info-mt,
+.part,
+.development {
+    padding-left: 10%;
+}
+
+.big-logo {
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 20%;
+    width: 20%;
+    height: 20%;
+    display: inline-block;
+}
+
+.devs {
+    display: inline-block;
+}
+
+.list-part {
+    list-style: none;
+}
+
+.list-page {
+    list-style: none;
+    display: inline-block;
+}
+
+.partners {
+    width: 20%;
+    height: 20%;
+    border-radius: 200px 200px 200px 200px;
+    display: inline-block;
+    margin-right: 4%;
+}
+
+.list-dev {
+    list-style: none;
+}
+
+li:hover {
+    background-color: #0E1526;
+    color: #F34906;
+}
